# CMakeProjectTemplates

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Doxygen.cmake  ExamplelibConfig.cmake.in
docs/: CMakeLists.txt
include/: Utils.hh  add.h
src/: CMakeLists.txt  Utils.cpp
tests/: CMakeLists.txt  test_utils.cpp
